[gd_scene load_steps=7 format=2]

[ext_resource path="res://GameRoom.gd" type="Script" id=1]
[ext_resource path="res://Deck.tscn" type="PackedScene" id=2]
[ext_resource path="res://Hand.tscn" type="PackedScene" id=3]
[ext_resource path="res://AIHand.gd" type="Script" id=4]
[ext_resource path="res://PlayerField.gd" type="Script" id=5]
[ext_resource path="res://AIField.gd" type="Script" id=6]

[node name="GameRoom" type="Node2D"]
script = ExtResource( 1 )

[node name="GameOver" type="Label" parent="."]
margin_left = 566.052
margin_top = 314.042
margin_right = 643.052
margin_bottom = 328.042

[node name="PlayButton" type="Button" parent="GameOver"]
visible = false
margin_left = -1.99026
margin_top = 23.2197
margin_right = 88.0097
margin_bottom = 43.2197
disabled = true
text = "PLAY AGAIN"

[node name="Deck" parent="." instance=ExtResource( 2 )]
position = Vector2( 1206.55, 322.88 )
rotation = 1.5708

[node name="PlayerHand" parent="." instance=ExtResource( 3 )]
position = Vector2( 247.445, 651.687 )

[node name="Discard" parent="." instance=ExtResource( 2 )]
position = Vector2( 1204.7, 152.722 )
rotation = 1.5708
hidden = false
default_size = 0

[node name="EndTurn" type="Button" parent="."]
margin_left = 711.77
margin_top = 636.371
margin_right = 778.77
margin_bottom = 656.371
text = "End Turn"

[node name="AIHand" type="Node2D" parent="."]
position = Vector2( 1.43198, -133.174 )
script = ExtResource( 4 )

[node name="PlayerMana" type="Label" parent="."]
margin_left = 711.446
margin_top = 608.423
margin_right = 769.446
margin_bottom = 622.423
text = "Mana: 10"

[node name="PlayerHealth" type="Label" parent="."]
margin_left = 709.66
margin_top = 583.055
margin_right = 775.66
margin_bottom = 614.055
text = "Health: 

"

[node name="AIHealth" type="Label" parent="."]
margin_left = 704.334
margin_top = 10.3388
margin_right = 817.334
margin_bottom = 41.3388
text = "Enemy Health: 

"

[node name="AITimer" type="Timer" parent="."]

[node name="PlayerField" type="Node2D" parent="."]
position = Vector2( 249.108, 387.148 )
script = ExtResource( 5 )

[node name="AIField" type="Node2D" parent="."]
position = Vector2( 1.58667, 136.454 )
script = ExtResource( 6 )

[node name="DisplayTimer" type="Timer" parent="."]
[connection signal="pressed" from="GameOver/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="EndTurn" to="." method="_on_EndTurn_pressed"]
[connection signal="timeout" from="AITimer" to="." method="_on_AITimer_timeout"]
[connection signal="timeout" from="DisplayTimer" to="." method="_on_DisplayTimer_timeout"]
